<resources>
    <string name="app_name">MovieTracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie Tracker</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Side bar icon texts -->
    <string name="menu_home">Home</string>
    <string name="menu_user">User</string>
    <string name="menu_ratings">My Ratings</string>
    <string name="menu_events">Movie Events</string>
    <string name="menu_search">Search Movies</string>
    <string name="menu_login">Search Movies</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- common refresh string -->
    <string name="refresh_text">Refresh</string>

    <!-- file name strings -->
    <string name="ratings_file">ratings.xml</string>
    <string name="movies_file">movies.xml</string>
    <string name="theatres_file">theatres.xml</string>
    <string name="users_file">users.xml</string>
    <string name="user_schedule_file">userSchedule.xml</string>

    <!-- add rating dialog -->
    <string name="choose_a_movie_text">choose a movie</string>
    <string name="rating_text">rating"</string>
    <string name="comment_text">comment</string>
    <string name="type_here_text">type here</string>

    <!-- check rating dialog -->
    <string name="check_rating_movie_text">Movie: </string>
    <string name="check_rating_genres_text">Genres: </string>
    <string name="check_rating_comment_text">Comment: </string>
    <string name="check_rating_delete_text">delete rating</string>

    <!-- login fragment -->
    <string name="login_fragment_password_text">password</string>
    <string name="login_fragment_register_text">register</string>
    <string name="login_fragment_login_text">login</string>
    <string name="login_fragment_username_text">username</string>
    <string name="login_fragment_login_success">Logged in successfully</string>
    <string name="login_fragment_register_success">Registered successfully</string>
    <string name="login_fragment_login_fail">Login failed</string>
    <string name="login_fragment_register_fail">Registration failed</string>

    <!-- movie event fragment -->
    <string name="event_fragment_date_text">Date</string>
    <string name="event_fragment_begin_text">Beginning time</string>
    <string name="event_fragment_end_text">Ending time</string>
    <string name="event_fragment_theatre_text">Theatre</string>

    <!-- movie search fragment -->
    <string name="search_fragment_title_text">Movie title</string>
    <string name="search_fragment_actor_first_text">Actor first name</string>
    <string name="search_fragment_actor_last_text">Actor last name</string>
    <string name="search_fragment_director_first_text">Director first name</string>
    <string name="search_fragment_director_last_text">Director last name</string>
    <string name="search_fragment_info_text">Search for a movie with any or all of these filters.\nClick an entry for more information about the movie</string>
    <string name="search_fragment_genre_button_text">genres</string>

    <!-- event fragment dialog -->
    <string name="event_dialog_title_text">Title: </string>
    <string name="event_dialog_theatre_text">Theatre: </string>
    <string name="event_dialog_start_text">Starts at: </string>
    <string name="event_dialog_end_text">Ends at: </string>
    <string name="event_dialog_date_text">Date: </string>
    <string name="event_dialog_calendar_text">Add to my calendar</string>
    <string name="already_added_toast">This event is already added to your calendar</string>
    <string name="please_login_toast">Please login in to add events to calendar</string>
    <string name="successfully_added_toast">Event added to your calendar</string>

    <!-- are you sure dialog -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_want_to">Do you want to delete this user?</string>

    <!-- rating archive fragment -->
    <string name="rating_fragment_add_text">add new rating</string>

    <!-- user fragment -->
    <string name="user_fragment_welcome_text">Welcome</string>
    <string name="user_fragment_logout_text">log out</string>
    <string name="user_fragment_delete_text">delete user</string>
    <string name="user_fragment_calendar_next_event_text">Check your events this month by tapping the day</string>
    <string name="user_fragment_calendar_no_events_text">Nothing scheduled for this month</string>

    <!-- scheduled event dialog -->
    <string name="scheduled_event_dialog_title_text">Events</string>

    <!-- genres alert dialog -->
    <string name="genres_alert_dialog_title_text">Pick the genres you like</string>
    <string name="genres_alert_dialog_ok_text">OK</string>
    <string name="genres_alert_dialog_cancel_text">Cancel</string>

    <!-- password help dialog -->
    <string name="password_help_dialog_title_text">Password creation</string>
    <string name="password_help_dialog_help_text">A password must contain at least 12 characters, one upper- and one lowercase character, one number and a special character</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>