<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/movie_title_text"
        android:text="@string/event_dialog_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/theatre_name_text"
        android:text="@string/event_dialog_theatre_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/start_time_text"
        android:text="@string/event_dialog_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/end_time_text"
        android:text="@string/event_dialog_end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/date_text"
        android:text="@string/event_dialog_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/add_to_calendar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_dialog_calendar_text"/>




</LinearLayout>