<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_user_fragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_user" />

        <item
            android:id="@+id/nav_rating_archive"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/menu_ratings" />

        <item
            android:id="@+id/nav_movie_event"
            android:icon="@drawable/ic_baseline_movie_24"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/nav_movie_search_fragment"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_search" />

    </group>
</menu>