<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RatingBar
        android:id="@+id/check_rating_ratingbar"
        android:isIndicator="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/title_TextView"
        android:text="@string/check_rating_movie_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/genres_TextView"
        android:text="@string/check_rating_genres_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/check_rating_comment_text"
        android:text="@string/check_rating_comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/check_rating_delete_button"
        android:text="@string/check_rating_delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>