<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="fragment_login"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.movietrackerv2.ui.view.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_ratingArchiveFragment"
            app:destination="@id/nav_rating_archive" />
        <action
            android:id="@+id/action_nav_home_to_movieEventFragment"
            app:destination="@id/nav_movie_event" />
        <action
            android:id="@+id/action_nav_home_to_movieSearchFragment"
            app:destination="@id/nav_movie_search_fragment" />
        <action
            android:id="@+id/action_nav_home_to_LoginFragment"
            app:destination="@id/nav_login_fragment" />
        <action
            android:id="@+id/action_nav_home_to_userFragment"
            app:destination="@id/nav_user_fragment" />
        <action
            android:id="@+id/action_nav_home_to_settingsFragment"
            app:destination="@id/nav_settings_fragment" />
    </fragment>


    <fragment
        android:id="@+id/nav_rating_archive"
        android:name="com.example.movietrackerv2.ui.view.fragment.RatingArchiveFragment"
        android:label="@string/menu_ratings"
        tools:layout="@layout/fragment_rating_archive_list" />
    <fragment
        android:id="@+id/nav_movie_event"
        android:name="com.example.movietrackerv2.ui.view.fragment.MovieEventFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_movie_event_list" />
    <fragment
        android:id="@+id/nav_movie_search_fragment"
        android:name="com.example.movietrackerv2.ui.view.fragment.MovieSearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_movie_search_list" />
    <fragment
        android:id="@+id/nav_login_fragment"
        android:name="com.example.movietrackerv2.ui.view.fragment.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_user_fragment"
        android:name="com.example.movietrackerv2.ui.view.fragment.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/nav_settings_fragment"
        android:name="com.example.movietrackerv2.ui.view.fragment.SettingsFragment"
        android:label="SettingsFragment" />


</navigation>