<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    xmlns:android="http://schemas.android.com/apk/res/android" >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="328dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.view.fragment.RatingArchiveFragment"
        tools:listitem="@layout/fragment_rating_archive" />


    <Spinner
        android:id="@+id/theatreSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/theatreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/theatreText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/event_fragment_date_text"
        app:layout_constraintEnd_toEndOf="@+id/theatreText"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/theatreText"
        app:layout_constraintTop_toBottomOf="@+id/theatreText" />

    <TextView
        android:id="@+id/beginTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/event_fragment_begin_text"
        app:layout_constraintEnd_toEndOf="@+id/endTimeText"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/endTimeText"
        app:layout_constraintTop_toBottomOf="@+id/endTimeText" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:hint="dd.mm.YYYY"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/dateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/dateText"
        app:layout_constraintTop_toTopOf="@+id/dateText"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/startTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="hh:mm"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/beginTimeText"
        app:layout_constraintStart_toStartOf="@+id/endTimeInput"
        app:layout_constraintTop_toTopOf="@+id/beginTimeText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/endTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/event_fragment_end_text"
        app:layout_constraintEnd_toEndOf="@+id/dateText"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <EditText
        android:id="@+id/endTimeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="hh:mm"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeText"
        app:layout_constraintEnd_toEndOf="@+id/dateInput"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dateInput"
        app:layout_constraintTop_toTopOf="@+id/endTimeText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/theatreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:text="@string/event_fragment_theatre_text"
        app:layout_constraintEnd_toStartOf="@+id/theatreSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/refresh_text"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeInput"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
